--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 </div>
             </article>
 
-            <article class="card">
+            <article class="card bg-dark">
                 <div class="category category-sports">Sports</div>
                 <h3><a href="article.html">Lorem ipsum dolor sit, ame</a></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nulla, dolor quibusdam consequuntur libero eius enim odit. Ad, molestias cum.</p>
             </article>
 
 
-            <article class="card">
+            <article class="card ">
                 <img src="img/image_resources 3/articles/tech1.jpg" alt="">
                 <div class="category category-tech">Technology</div>
                 <h3><a href="article.html">Lorem ipsum dolor sit, ame</a></h3>
@@ -88,7 +88,7 @@
             </article>
 
 
-            <article class="card">
+            <article class="card bg-primary">
                 <div class="category category-sports">Sports</div>
                 <h3><a href="article.html">Lorem ipsum dolor sit, ame</a></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nulla, dolor quibusdam consequuntur libero eius enim odit. Ad, molestias cum.</p>
@@ -106,5 +106,39 @@
         </div>
     </div>
     </section>
+    <footer id="main-footer" class="py-2">
+        <div class="container footer-container">
+            <div>
+                <img src="img/image_resources 3/logo_light.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique, fugiat error excepturi tempora soluta quod iure quam distinctio ipsam!</p>
+            </div>
+            <div>
+                <h3>Email Newsletter</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <form>
+                    <input type="email" placeholder="Enter Email">
+                    <input type="submit" value="Subscribe" class="btn btn-primary">
+                </form>
+            </div>
+            <div>
+                <h3>Site Links</h3>
+                <ul class="list">
+                    <li><a href="#">Help & Support</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+
+                </ul>
+            </div>
+            <div>
+                <h2>Join Our Club</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, tenetur!</p>
+                <a href="#" class="btn btn-secondary"></a>
+            </div>
+            <div>
+                <p>Copyright &copy; 2021, All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
